--- a/style.css
+++ b/style.css
@@ -3,25 +3,24 @@
     font-family: Arial, Helvetica, sans-serif
 }
 
-.main_container {
-    display: flex;
-    flex-direction: column;
+header {
     width: 90%;
-    height: 90%;
-    margin: 20px auto;
-}
-
-.container_menu {
+    margin: 30px auto;
     display: flex;
     flex-direction: row;
     padding-bottom: 15px;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid #666666;
     vertical-align: middle;
 }
 
 .logo_bmw {
     width: 60px;
     height: 60px;
+}
+
+header a {
+    text-decoration: none;
+    color: #666666;
 }
 
 .menu {
@@ -41,21 +40,86 @@
     color: #0066B1;
 }
 
+.menu a:hover {
+    cursor: pointer;
+    color: #262626;
+    padding-bottom: 43px;
+    border-bottom: 4px solid #0066B1;
+}
+
+.menu_topright a:hover {
+    cursor: pointer;
+    color: #262626;
+    padding-bottom: 43px;
+    border-bottom: 4px solid #0066B1;
+}
+
+.main_container {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    height: 90%;
+    margin: 20px auto;
+}
+
 h1 {
     color: #262626;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-top: 80px;
+    margin-top: 50px;
+    text-transform: uppercase;
+    font-weight: normal;
+}
+
+h3 {
+    color: #4D4D4D;
+    text-transform: uppercase;
+    font-weight: normal;
 }
 
 .container_filters {
     display: flex;
+    flex-direction: column;
+}
+
+.filters {
+    display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    width: 400px;
 }
 
 .filters button {
     background-color: white;
+    padding: 10px;
+    margin-right: 15px;
+    border: 1px solid #BBBBBB;
+}
+
+.filters a {
+    display: flex;
+    text-decoration: none;
+    color: #666666;
+    font-weight: bold;
+    font-size: 18px;
+    align-items: center;
+}
+
+.filters button:hover {
+    cursor: pointer;
+    border: 1px solid #262626;
+}
+
+.filters a:hover {
+    color: #262626;
+}
+
+#mas_filtros {
+    text-decoration: none;
+    color: #262626;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.car_selection {
+    margin-top: 30px;
 }
 
 .car_selection_menu {
@@ -63,6 +127,8 @@ h1 {
     display: flex;
     flex-direction: row;
     list-style-type: none;
+    margin-left: 10px;
+    border-bottom: 1px solid #E6E6E6;
 }
 
 .car_selection_menu a {
@@ -92,19 +158,14 @@ h1 {
     border-bottom: 3px solid black;
 }
 
-/* .car_selection_menu a:hover::after {
-    border-bottom: 3px solid black;
-    width: 60px;
-    content: '';
-    height: auto;
-    z-index: 1;
-    padding: 12px;
-    position: absolute;
-    margin-left: -80px;
-} */
-
-h2 {
+h4 {
     font-weight: normal;
+    text-transform: uppercase;
+}
+
+.first_h4 {
+    font-weight: normal;
+    text-transform: none;
 }
 
 .container_cars button {
@@ -166,3 +227,217 @@ h2 {
     margin-left: 5px;
     margin-right: 5px;
 }
+
+.all_categories {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+h2 {
+    color: #262626;
+    margin-top: 80px;
+    text-transform: uppercase;
+    font-weight: normal;
+}
+
+.series_bmw ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: -40px;
+    margin-right: -90px;
+
+}
+
+.series_bmw li {
+    width: 30%;
+    list-style-type: none;
+    line-height: 30px;
+    border-bottom: 1px solid #E6E6E6;
+    margin-right: 30px;
+    font-size: 18px;
+}
+
+.series_bmw a {
+    display: flex;
+    flex-direction: row;
+    text-decoration: none;
+    color: #4D4D4D;
+}
+
+.series_bmw p {
+    margin-right: 240px;
+}
+
+.series_bmw span {
+    display: flex;
+    align-items: center;
+}
+
+.carroceria ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: -40px;
+    margin-right: -90px;
+
+}
+
+.carroceria li {
+    width: 30%;
+    list-style-type: none;
+    line-height: 30px;
+    border-bottom: 1px solid #E6E6E6;
+    margin-right: 30px;
+    font-size: 18px;
+}
+
+.carroceria a {
+    display: flex;
+    flex-direction: row;
+    text-decoration: none;
+    color: #4D4D4D;
+}
+
+.carroceria p {
+    margin-right: 240px;
+}
+
+.carroceria span {
+    display: flex;
+    align-items: center;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    border-top: 1px solid #E6E6E6;
+    margin: 50px auto;
+}
+
+.footer_top {
+    display: flex;
+    flex-direction: column;
+    flex-direction: row;
+    margin-top: 30px;
+    /* margin-left: 40px; */
+}
+
+#encuentra_bmw {
+    text-transform: uppercase;
+    color: #4D4D4D;
+    margin-right: 50px;
+    font-size: small;
+}
+
+#modelos {
+    font-weight: bold;
+    font-size: small;
+}
+
+.footer_top a {
+    text-decoration: none;
+    color: #262626;
+}
+
+.footer_top a:hover {
+    color: #0066B1;
+    cursor: pointer;
+}
+
+.footer_middle {
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+    margin-left: -40px;
+    background-color: #F6F6F6;
+}
+
+.menu_footer {
+    display: flex;
+    flex-direction: row;
+}
+
+.menu_footer nav {
+    width: 33%;
+}
+
+.menu_footer ul {
+    list-style-type: none;
+    line-height: 30px;
+}
+
+.menu_footer li {
+    font-size: small;
+}
+
+.menu_footer h5 {
+    text-transform: uppercase;
+    color: #4D4D4D;
+    font-weight: normal;
+    font-size: small;
+}
+
+.menu_footer a {
+    text-decoration: none;
+    color: #4D4D4D;
+    font-weight: bold;
+}
+
+.menu_footer a:hover {
+    color: black;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+#arrow_footer {
+   font-size: 1.5em;
+}
+
+.social_buttons {
+    margin: 40px 0px 40px 40px;
+}
+
+.social_buttons a {
+    /* position: relative; */
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    margin-right: 40px;
+}
+
+.social_buttons a:hover {
+    color: #0066B1;
+    cursor: pointer;
+}
+
+.footer_bottom {
+    display: flex;
+    flex-direction: row;
+    font-size: small;
+    margin: 20px 0px 0px 0px;
+
+}
+.footer_bottom ul {
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+}
+
+.footer_bottom a {
+    color: black;
+    text-decoration: none;
+    margin-right: 20px;
+    font-weight: bold;
+}
+
+.footer_bottom a:hover {
+    color: #0066B1;
+    cursor: pointer;
+}
+
+/* * {
+    border: 1px solid red;
+} */
